--- a/package.json
+++ b/package.json
@@ -24,7 +24,14 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.0",
     "@fortawesome/free-regular-svg-icons": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "lodash-es": "^4.17.21",
+    "lodash.get": "^4.4.2",
+    "lodash.isequal": "^4.5.0",
+    "lodash.merge": "^4.6.2",
+    "lodash.set": "^4.3.2",
+    "ngx-store": "^3.1.1",
     "rxjs": "~7.5.0",
+    "ts-debug": "^1.3.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -33,6 +40,7 @@
     "@angular/cli": "~13.3.0",
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "^12.11.1",
     "autoprefixer": "^10.4.4",
     "jasmine-core": "~4.0.0",
