added internal express server

--- a/angular.json
+++ b/angular.json
@@ -74,10 +74,6 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "host": "192.168.1.161",
-            "port": 8080
-          },
           "configurations": {
             "production": {
               "browserTarget": "elexilink:build:production",
@@ -88,7 +84,7 @@
               "proxyConfig": "./proxy.conf.js"
             }
           },
-          "defaultConfiguration": "production"
+          "defaultConfiguration": "development"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
@@ -112,6 +108,15 @@
               "src/styles.scss"
             ],
             "scripts": []
+          }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "baseHref": "/",
+            "branch": "main",
+            "name": "UnspokenMallard",
+            "email": "anze@eventregistry.org"
           }
         }
       }
